--- a/plugins.def.cfg
+++ b/plugins.def.cfg
@@ -37,6 +37,7 @@ asm.x86_nz
 asm.x86_cs
 asm.xcore_cs
 asm.z80
+asm.baleful
 asm.i8080
 asm.8051
 asm.msil
@@ -54,6 +55,7 @@ anal.sh
 anal.x86_cs
 anal.x86_udis
 anal.z80
+anal.baleful
 anal.8051
 anal.i8080
 anal.arm_gnu
