feature balefulVM in new release.

--- a/plugins.def.cfg
+++ b/plugins.def.cfg
@@ -49,6 +49,7 @@ asm.ws
 asm.cr16
 asm.v850
 asm.spc700
+asm.baleful
 anal.null
 anal.sh
 anal.x86_cs
@@ -83,6 +84,7 @@ anal.cr16
 anal.v850
 anal.xcore_cs
 anal.msp430
+anal.baleful
 bin.any
 bin.bios
 bin.bf
